// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server/graphql/v1/transaction return collective.transactions when given a collective slug (case insensitive) 1`] = `
Object {
  "data": Object {
    "Collective": Object {
      "id": 3,
      "slug": "wwcodeaustin",
      "transactions": Array [
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 7,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 40,
          "paymentMethod": Object {
            "id": 18,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 37,
          "type": "DEBIT",
        },
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 7,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 36,
          "paymentMethod": Object {
            "id": 16,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 33,
          "type": "DEBIT",
        },
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 6,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 32,
          "paymentMethod": Object {
            "id": 15,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 29,
          "type": "DEBIT",
        },
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 6,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 28,
          "paymentMethod": Object {
            "id": 13,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 25,
          "type": "DEBIT",
        },
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 5,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 24,
          "paymentMethod": Object {
            "id": 12,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 21,
          "type": "DEBIT",
        },
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 5,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 20,
          "paymentMethod": Object {
            "id": 10,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 17,
          "type": "DEBIT",
        },
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 4,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 16,
          "paymentMethod": Object {
            "id": 9,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 13,
          "type": "DEBIT",
        },
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 4,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 12,
          "paymentMethod": Object {
            "id": 7,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 9,
          "type": "DEBIT",
        },
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 3,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 8,
          "paymentMethod": Object {
            "id": 6,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 5,
          "type": "DEBIT",
        },
        Object {
          "createdByUser": Object {
            "email": null,
            "id": 3,
          },
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 4,
          "paymentMethod": Object {
            "id": 4,
            "name": null,
          },
          "subscription": null,
          "type": "CREDIT",
        },
        Object {
          "createdByUser": null,
          "host": Object {
            "id": 2,
            "slug": "wwcode",
          },
          "id": 1,
          "type": "DEBIT",
        },
      ],
    },
  },
}
`;

exports[`server/graphql/v1/transaction return transactions returns one transaction by id 1`] = `
Object {
  "data": Object {
    "Transaction": Object {
      "createdByUser": null,
      "host": Object {
        "id": 2,
        "slug": "wwcode",
      },
      "id": 2,
      "paymentMethod": null,
      "subscription": null,
      "type": "CREDIT",
    },
  },
}
`;

exports[`server/graphql/v1/transaction return transactions returns one transaction by uuid 1`] = `
Object {
  "data": Object {
    "Transaction": Object {
      "createdByUser": null,
      "host": Object {
        "id": 2,
        "slug": "wwcode",
      },
      "id": 1,
      "type": "DEBIT",
    },
  },
}
`;

exports[`server/graphql/v1/transaction return transactions with dateFrom 1`] = `
Object {
  "data": Object {
    "allTransactions": Array [
      Object {
        "createdAt": "Fri May 04 2018 00:00:04 GMT+0000 (Coordinated Universal Time)",
        "id": 36,
      },
      Object {
        "createdAt": "Fri May 04 2018 00:00:04 GMT+0000 (Coordinated Universal Time)",
        "id": 33,
      },
      Object {
        "createdAt": "Tue Apr 03 2018 00:00:03 GMT+0000 (Coordinated Universal Time)",
        "id": 28,
      },
      Object {
        "createdAt": "Tue Apr 03 2018 00:00:03 GMT+0000 (Coordinated Universal Time)",
        "id": 25,
      },
      Object {
        "createdAt": "Fri Mar 02 2018 00:00:02 GMT+0000 (Coordinated Universal Time)",
        "id": 20,
      },
      Object {
        "createdAt": "Fri Mar 02 2018 00:00:02 GMT+0000 (Coordinated Universal Time)",
        "id": 17,
      },
      Object {
        "createdAt": "Thu Feb 01 2018 00:00:01 GMT+0000 (Coordinated Universal Time)",
        "id": 12,
      },
      Object {
        "createdAt": "Thu Feb 01 2018 00:00:01 GMT+0000 (Coordinated Universal Time)",
        "id": 9,
      },
      Object {
        "createdAt": "Sun Dec 31 2017 00:00:00 GMT+0000 (Coordinated Universal Time)",
        "id": 4,
      },
      Object {
        "createdAt": "Sun Dec 31 2017 00:00:00 GMT+0000 (Coordinated Universal Time)",
        "id": 1,
      },
    ],
  },
}
`;

exports[`server/graphql/v1/transaction return transactions with dateTo 1`] = `
Object {
  "data": Object {
    "allTransactions": Array [
      Object {
        "createdAt": "Thu May 04 2017 00:00:04 GMT+0000 (Coordinated Universal Time)",
        "id": 40,
      },
      Object {
        "createdAt": "Thu May 04 2017 00:00:04 GMT+0000 (Coordinated Universal Time)",
        "id": 37,
      },
      Object {
        "createdAt": "Mon Apr 03 2017 00:00:03 GMT+0000 (Coordinated Universal Time)",
        "id": 32,
      },
      Object {
        "createdAt": "Mon Apr 03 2017 00:00:03 GMT+0000 (Coordinated Universal Time)",
        "id": 29,
      },
      Object {
        "createdAt": "Thu Mar 02 2017 00:00:02 GMT+0000 (Coordinated Universal Time)",
        "id": 24,
      },
      Object {
        "createdAt": "Thu Mar 02 2017 00:00:02 GMT+0000 (Coordinated Universal Time)",
        "id": 21,
      },
      Object {
        "createdAt": "Wed Feb 01 2017 00:00:01 GMT+0000 (Coordinated Universal Time)",
        "id": 16,
      },
      Object {
        "createdAt": "Wed Feb 01 2017 00:00:01 GMT+0000 (Coordinated Universal Time)",
        "id": 13,
      },
      Object {
        "createdAt": "Sat Dec 31 2016 00:00:00 GMT+0000 (Coordinated Universal Time)",
        "id": 8,
      },
      Object {
        "createdAt": "Sat Dec 31 2016 00:00:00 GMT+0000 (Coordinated Universal Time)",
        "id": 5,
      },
    ],
  },
}
`;

exports[`server/graphql/v1/transaction return transactions with filter on type 1`] = `
Object {
  "data": Object {
    "allTransactions": Array [
      Object {
        "id": 36,
        "type": "CREDIT",
      },
      Object {
        "id": 28,
        "type": "CREDIT",
      },
      Object {
        "id": 20,
        "type": "CREDIT",
      },
      Object {
        "id": 12,
        "type": "CREDIT",
      },
      Object {
        "id": 4,
        "type": "CREDIT",
      },
      Object {
        "id": 40,
        "type": "CREDIT",
      },
      Object {
        "id": 32,
        "type": "CREDIT",
      },
      Object {
        "id": 24,
        "type": "CREDIT",
      },
      Object {
        "id": 16,
        "type": "CREDIT",
      },
      Object {
        "id": 8,
        "type": "CREDIT",
      },
    ],
  },
}
`;

exports[`server/graphql/v1/transaction return transactions with pagination 1`] = `
Object {
  "data": Object {
    "allTransactions": Array [
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 7,
        },
        "fromCollective": Object {
          "id": 9,
          "slug": "praxent",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 36,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 16,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 33,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 6,
        },
        "fromCollective": Object {
          "id": 8,
          "slug": "max-point",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 28,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 13,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 25,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 5,
        },
        "fromCollective": Object {
          "id": 7,
          "slug": "holly-day",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 20,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 10,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 17,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 4,
        },
        "fromCollective": Object {
          "id": 6,
          "slug": "geoff-frey",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 12,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 7,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 9,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 3,
        },
        "fromCollective": Object {
          "id": 5,
          "slug": "craft-work",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 4,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 4,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 1,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 7,
        },
        "fromCollective": Object {
          "id": 9,
          "slug": "praxent",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 40,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 18,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 37,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 6,
        },
        "fromCollective": Object {
          "id": 8,
          "slug": "max-point",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 32,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 15,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 29,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 5,
        },
        "fromCollective": Object {
          "id": 7,
          "slug": "holly-day",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 24,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 12,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 21,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 4,
        },
        "fromCollective": Object {
          "id": 6,
          "slug": "geoff-frey",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 16,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 9,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 13,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": Object {
          "email": null,
          "id": 3,
        },
        "fromCollective": Object {
          "id": 5,
          "slug": "craft-work",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 8,
        "kind": "CONTRIBUTION",
        "paymentMethod": Object {
          "id": 6,
          "name": null,
        },
        "subscription": null,
        "type": "CREDIT",
      },
      Object {
        "collective": Object {
          "id": 3,
          "slug": "wwcodeaustin",
        },
        "createdByUser": null,
        "fromCollective": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "host": Object {
          "id": 2,
          "slug": "wwcode",
        },
        "id": 5,
        "kind": "HOST_FEE",
        "type": "DEBIT",
      },
    ],
  },
}
`;
